2005-08-15  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/faad/gstfaad.c: (gst_faad_event):
	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_header):
	  Fix debug.

2005-08-15  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/qtdemux/qtdemux.c: (qtdemux_parse_trak),
	(qtdemux_video_caps):
	  Forwardport from 0.8 to implement RLE.

2005-08-15  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/README:
	Added rtsp server implementation docs.

2005-08-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/aalib/gstaasink.c:
	  aalib is LGPL, so this plugin can be LGPL
	* ext/arts/gst_arts.c: (plugin_init):
	  rename, we don't like underscores
	* ext/audiofile/gstaf.c:
	* ext/sndfile/gstsf.c:
	  rename, we like a descriptive plugin name
	* ext/gconf/gstgconfelements.c:
	  change description a little
	* ext/musicbrainz/gsttrm.c:
	  musicbrainz is LGPL, so plugin can be LGPL
	* ext/raw1394/gst1394.c:
	  rename, we like all-digit names
	* gst/equalizer/gstiirequalizer.c:
	* gst/fdsrc/gstfdsrc.c:
	* gst/multifilesink/gstmultifilesink.c:
	  rename
	* gst/virtualdub/gstvirtualdub.c:
	  use GST_PLUGIN_DEFINE
	* sys/dxr3/dxr3init.c:
	  only uses system headers, and code is LGPL, so plugin is LGPL

2005-08-13  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/mad/Makefile.am:
	* gst/avi/Makefile.am:
	* gst/effectv/Makefile.am:
	* gst/udp/Makefile.am:
	* gst/wavparse/Makefile.am:
	  Use -lgstfoo-@GST_MAJORMINOR@ instead of -lgstfoo-0.9

2005-08-12  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/jpeg/gstjpegdec.c: (gst_jpeg_dec_decode_indirect),
	(gst_jpeg_dec_decode_direct), (gst_jpeg_dec_chain):
	  Fix decoding of pictures with certain uneven or unaligned
	  widths where jpeglib needs more horizontal padding than our
	  I420 buffers provide, resulting in blocky artifacts at the
	  left side of the picture (#164176). 
	  Also make use of our shiny new GST_ROUND_N() macros.

2005-08-11  Tim-Philipp Müller  <tim at centricular dot net>
